<resources>
    <string name="app_name">ResicApp</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="store_fragment_label">Store Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="button_to_purchase">Nueva compra</string>
    <string name="button_to_purchase_history">Historial de compra</string>

    <string name="login_title">Iniciar sesión</string>
    <string name="user_title">Usuario</string>
    <string name="password_title">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="amount_title">Monto:</string>
    <string name="user_money_title">Dinero disponible:</string>
    <string name="productos_disponibles_title">Productos disponibles</string>
    <string name="name_title">Nombre</string>
    <string name="created_date_title">Creado</string>

    <string name="message_incorrect_login">Nombre de usuario o contraseña incorrectos.</string>
    <string name="message_empty_text">Por favor complete los campos vacíos</string>
    <string name="message_succesfully_purchase">¡Gracias por su compra!</string>

    <string name="author_title">Autor:</string>
    <string name="type_title">Tipo:</string>
    <string name="classification_title">Clasificación:</string>
    <string name="released_date_title">Lanzamiento:</string>
    <string name="category_title">Categoría:</string>
    <string name="stars_title">Calificación:</string>
    <string name="price_title">Precio final:</string>


    <string name="product_logo">product_logo</string>
    <string name="buy">Comprar</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt
        ut labore et dolore magna aliqua.</string>
    <string name="toolbar_title">ResicApp</string>

</resources>